[tool.poetry]
name = "OdintsovTim_brain_games"
version = "0.8.1"
description = "It's a packege with different games"
authors = ["Odintsov Timur <timodin@yandex.ru>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/OdintsovTim/python-project-lvl1"
classifiers = [
  "Topic :: Games/Entertainment :: Puzzle Games",
  "Programming Language :: Python :: 3.7",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
